// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CPopover should be closed by default 1`] = `
<div
  class="ext-growthExperiments-Popover"
>
  <div>
    <div>
      
      <button>
        Click me
      </button>
      
    </div>
    <div
      class="ext-growthExperiments-Popover__surface-container"
    >
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`CPopover should display slot content when opened 1`] = `
<div
  class="ext-growthExperiments-Popover"
>
  <div>
    <div>
      
      <button>
        Click me
      </button>
      
    </div>
    <div
      class="ext-growthExperiments-Popover__surface-container"
    >
      <c-popper-stub
        icon="Close icon"
        icon-label="Close label"
        triggerref="[object HTMLDivElement]"
      />
    </div>
  </div>
</div>
`;

exports[`CPopover should hide content when pressing on esc 1`] = `
<div
  class="ext-growthExperiments-Popover"
>
  <div>
    <div>
      
      <button>
        Click me
      </button>
      
    </div>
    <div
      class="ext-growthExperiments-Popover__surface-container"
    >
      <!--v-if-->
    </div>
  </div>
</div>
`;

exports[`CPopover should hide slot content when closed 1`] = `
<div
  class="ext-growthExperiments-Popover"
>
  <div>
    <div>
      
      <button>
        Click me
      </button>
      
    </div>
    <div
      class="ext-growthExperiments-Popover__surface-container"
    >
      <!--v-if-->
    </div>
  </div>
</div>
`;
